# helios

./: .gitmodules  .scalafix.conf  .scalafmt.conf  CMakeLists.txt  build.sbt  main.cpp  stryker4s.conf
.github/workflows/: scala-lint.yml  scala-test.yml
core/src/main/scala/: Canvas.scala  Color.scala  Matrix.scala  Point.scala  Vector.scala
core/src/main/scala/instances/: ColorInstances.scala  DoubleInstances.scala  PointInstances.scala  VectorInstances.scala
core/src/main/scala/math/: HilbertLieAlgebra.scala  InnerProductSpace.scala  LieAlgebra.scala  Number.scala  Vector3.scala  VectorSpace.scala
core/src/test/scala/: CanvasSpec.scala  ColorSpec.scala  MatrixSpec.scala  PointSpec.scala  VectorSpec.scala
core/src/test/scala/laws/: HilbertLieAlgebraLaws.scala  HilbertLieAlgebraTests.scala  InnerProductSpaceLaws.scala  InnerProductSpaceTests.scala  LieAlgebraLaws.scala  LieAlgebraTests.scala  VectorSpaceLaws.scala  VectorSpaceTests.scala
core/src/test/scala/math/: NumberSpec.scala  Vector3Spec.scala
project/: plugins.sbt
renderers/pictures/src/main/scala/: PpmRenderer.scala
renderers/pictures/src/test/scala/: PpmRendererSpec.scala
src/: App.cpp  App.h  App.hpp
src/models/: Color.cpp  Color.h  Image.cpp  Image.hpp  Pixel.cpp  Pixel.hpp
